[hotfix]: control signal bug fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
         "protoc",
         "protoimpl",
         "takeup",
-        "TOMO"
+        "TOMO",
+        "urfave"
     ],
     "cSpell.enableFiletypes": [
         "!jsonc",
