[test]: register test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "Idxs",
         "protoc",
         "protoimpl",
+        "stretchr",
         "takeup",
         "TOMO",
         "urfave"
