[db]: mysql client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,29 @@
     // cspell
     "cSpell.words": [
         "Anson",
+        "didi",
         "extendee",
+        "gnomock",
+        "gomodule",
+        "gorm",
+        "HGET",
+        "HGETALL",
+        "HMSET",
+        "HSET",
+        "HVALS",
         "Idxs",
+        "jinzhu",
+        "MSET",
+        "myhash",
+        "mykey",
+        "myset",
+        "orlangure",
         "protoc",
         "protoimpl",
+        "redigo",
+        "SADD",
+        "SETNX",
+        "SMEMBERS",
         "stretchr",
         "takeup",
         "TOMO",
