[tools]: init mysql

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     // cspell
     "cSpell.words": [
         "Anson",
+        "auths",
         "didi",
         "extendee",
         "gnomock",
