--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,7 @@
         "!markdown"
     ],
     // format on save
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "editor.inlayHints.enabled": "off",
     // 在文件末尾添加一个空行
     "files.insertFinalNewline": true,
